working in the spotlight, trying to ensure mobile link is clickable, added z-indexes .. hmm

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -640,6 +640,10 @@ video {
   z-index: 20;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -722,6 +726,14 @@ video {
   height: max-content;
 }
 
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
 .max-h-\[70vh\] {
   max-height: 70vh;
 }
@@ -732,6 +744,14 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[400px\] {
+  min-height: 400px;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
 }
 
 .\!w-full {
